# django-postgres-createdb.py

./: README.md  setup.cfg  setup.py
django_postgres_createdb/: __main__.py  apps.py
django_postgres_createdb/management/commands/: createdb.py
