# https://pypi.org/project/setupcfg-generator/
[metadata]
name = django-postgres-createdb
version = 2019.8.16
url = https://github.com/looking-for-a-job/django-postgres-createdb.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = django postgres create

[options]
install_requires = 
	Django>1.0
	setuptools
packages = 
	django_postgres_createdb
	django_postgres_createdb.management
	django_postgres_createdb.management.commands
